--- a/resources/public/chatter.css
+++ b/resources/public/chatter.css
@@ -1,3 +1,12 @@
 h1 {
     text-align: center;
+    background-color: #cccccc;
+}
+
+div {
+    border: 1px solid black;
+}
+
+img {
+    width: 100%;
 }
